--- a/MasterPremise_Premise/Dockerfile
+++ b/MasterPremise_Premise/Dockerfile
@@ -6,9 +6,7 @@ EXPOSE 443
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
 COPY . /src
-COPY ["Jea.MasterPremiseApp.PremiseService.Api/Jea.MasterPremiseApp.PremiseService.Api.csproj", "./"]
-RUN dotnet restore "./Jea.MasterPremiseApp.PremiseService.Api.csproj"
-COPY . .
+RUN dotnet restore "./Jea.MasterPremiseApp.PremiseService.Api/Jea.MasterPremiseApp.PremiseService.Api.csproj"
 WORKDIR "/src/."
 RUN dotnet build "Jea.MasterPremiseApp.PremiseService.Api.csproj" -c Release -o /app/build
 
